Resolve #8
Squashed commit of the following:

commit 5703c5191313f069cb324ebe60605a7837e07240
Author: Josh McArthur <joshua.mcarthur@gmail.com>
Date:   Fri Aug 17 22:15:43 2012 +1200

    Add translation for queue create failure

commit 7400523d4be8d69d0e7aaf0e8d0c3b4ba0ffd85b
Author: Josh McArthur <joshua.mcarthur@gmail.com>
Date:   Fri Aug 17 22:14:48 2012 +1200

    Update create action to check for the presence of the track in the queue before adding it

commit 628de5e8f748db00697fc9a0519705b52ba43fb6
Author: Josh McArthur <joshua.mcarthur@gmail.com>
Date:   Fri Aug 17 22:14:08 2012 +1200

    - Update flash message rendering to render Bootstrap-compatible classes.
    - Add styles for flash error

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -33,11 +33,21 @@ body {
 
 @successBackground: white;
 @successText: @green;
+@errorBackground: white;
+@errorText: @red;
 
-.alert-success {
+.alert-success, .alert-error {
 	border: 10px solid @green;
 	padding: 2%;
 	font-size: 125%;
 	line-height: 150%;
+}
+
+.alert-success { 
+	border-color: @green;
+}
+
+.alert-error {
+	border-color: @red;
 }
 
